fixed favicon and meta tags accross site

--- a/about.html
+++ b/about.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-	<meta charset="utf-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<!-- Meta tags for search engines -->
+  <link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
+  <!--meta tags-->
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Meta tags for search engines -->
     <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow." />
     <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
-	<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
-  <title>Tribe</title>
-  <link rel="apple-touch-icon" sizes="180x180" href="https://adelleking.github.io/Tribe/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="https://adelleking.github.io/Tribe/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="https://adelleking.github.io/Tribe/favicon-16x16.png">
+  <!--favicon icon-->
+  <link rel="apple-touch-icon" sizes="180x180" href="\apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href=".\favicon_io\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href=".\favicon_io\favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
+  <!--page title-->
+   <title>Tribe</title>
 </head>
 
 <body>
