reworked form to make check boxes more aligned with text

--- a/event.html
+++ b/event.html
@@ -285,18 +285,18 @@
   <label for="email"></label>
   <input type="email" id="email" name="email" placeholder="Enter your email address" required>
   <h4>Which event are you attending?</h4>
-  <input type="checkbox" id="park" name="event_name" value="park">
   <label for="park">Park Meet-up</label>
-  <input type="checkbox" id="coffee" name="event_name" value="coffee">
+  <input type="checkbox" id="park" name="event_name" value="park">
   <label for="coffee">Coffee Meet-up</label>
+  <input type="checkbox" id="coffee" name="event_name" value="coffee">
+  <label for="dinner">Dinner and Cocktails Meet-up</label> 
   <input type="checkbox" id="dinner" name="event_name" value="dinner">
-  <label for="dinner">Dinner and Cocktails Meet-up</label> <br>
-  <input type="checkbox" id="adults" name="event_name" value="adults">
   <label for="adults">Adults-only Meet-up</label>
-  <input type="checkbox" id="beach" name="event_name" value="beach">
+  <input type="checkbox" id="adults" name="event_name" value="adults">
   <label for="beach">Beach Meet-up</label>
-  <input type="checkbox" id="comedy" name="event_name" value="comedy">
+  <input type="checkbox" id="beach" name="event_name" value="beach">
   <label for="comedy">Comedy Meet-up</label>
+  <input type="checkbox" id="comedy" name="event_name" value="comedy">  
   <h4> Do you have any special requirements the host should be made aware of?</h4>
   <input type="radio" id="yes" name="requirements" value="yes">
   <label for="yes">Yes</label>
