--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<<html lang="en">
+<html lang="en">
 <head>
 	<link rel="stylesheet" type="text/css" href="assets/CSS/style.css">
 	<!--meta tags-->
