changed images to follow the WEBP format. replaced file paths throughout site.

--- a/about.html
+++ b/about.html
@@ -47,11 +47,11 @@
     <p class="aboutPageText">Tribe is a dedicated space for the African and Caribbean community. Together, we are building safe spaces to make new friendships and connections. Safe spaces where we can explore the local area with like-minded people and of course - find those Black Owned business who offer us the services and products designed for us!<br>Explore the site to find upcoming <a href="event.html#activity_section">activities</a> or <a href ="event.html#activity_section">submit</a> your own activity for others to join. </p>
     </div>
   <div class="box1">
-    <img class="img1" src="assets/images/jpeg-png/groupphoto.jpg" alt="group photo" >
+    <img class="img1" src="assets/images/groupphoto.webp" alt="group photo" >
   </div>
 </div>
 <div>
-  <img class="map" src="assets/images/jpeg-png/map.jpg">
+  <img class="map" src="assets/images/map.webp">
 </div>
 
 <footer class="footerContainer">  
