--- a/event.html
+++ b/event.html
@@ -55,7 +55,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images-Activities" src="assets/images/jpeg-png/park.jpg" alt="park">
+  		<img class="images-Activities" src="assets/images/park.webp" alt="park">
   		<div class="activityTitle">
   			<p id="activityTitle">Park Meetup-up</p>
   		</div>
@@ -88,7 +88,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images-Activities" src="assets/images/jpeg-png/coffee.jpg" alt="coffee cup" >
+  		<img class="images-Activities" src="assets/images/coffee.webp" alt="coffee cup" >
   		<div class="activityTitle">
   			<p>Coffee Meet-up</p>
   		</div>
@@ -221,7 +221,7 @@
 <div class="flip-card">
   <div class="flip-card-inner">
   	<div class="flip-card-front">
-  		<img class="images-Activities" src="assets/images/jpeg-png/comedy.jpg" alt="Comedian" >
+  		<img class="images-Activities" src="assets/images/comedy.webp" alt="Comedian" >
   		<div class="activityTitle">
   			<p>Comedy Night Meetup</p>
   		</div>
