--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 <!-- featured activities coming up -->
 <div class="featuredContainerOuter">	
   <div  class="featuredContainerLeft">
-  	<div class="imageContainer"><img class="imagesIndex" src="assets/images/jpeg-png/coffee.jpg" alt="man making a coffee"></div>
+  	<div class="imageContainer"><img class="imagesIndex" src="assets/images/coffee.webp" alt="man making a coffee"></div>
   	<div class="activity-info">Coffee Meet-up</div>
   	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
