completed testing on event page for html validator. Included screenshots of errors found and a screenshot once the page was re-run and is now error free.

--- a/about.html
+++ b/about.html
@@ -9,9 +9,9 @@
     <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow." />
     <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
   <!--favicon icon-->
-  <link rel="apple-touch-icon" sizes="180x180" href="\apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href=".\favicon_io\favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href=".\favicon_io\favicon-16x16.png">
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="./favicon_io\favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="./favicon_io\favicon-16x16.png">
   <link rel="manifest" href="/site.webmanifest">
   <!--page title-->
    <title>Tribe</title>
