--- a/event.html
+++ b/event.html
@@ -6,12 +6,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Meta tags for search engines -->
-    <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow." />
-    <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
+    <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow.">
+    <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities">
 	<!--favicon icon-->
-	<link rel="apple-touch-icon" sizes="180x180" href="\apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href=".\favicon_io\favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href=".\favicon_io\favicon-16x16.png">
+	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/favicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<!--page title-->
    <title>Tribe</title>
@@ -260,28 +260,28 @@
 <div class="form">
 	<h2 class="formHeader" >Have an activity you want others to join?<br> Submit it here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
 	<form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
-   <label for="name"></label> <br>
-  <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br>  
+   <label for="first-name"></label> <br>
+  <input type="text" id="first-name" name="Fname" placeholder="First name" required> <input type="text" id="last-name" name="Lname" placeholder="Last name" required><br>  
   <label for="activityName"></label><br>
   <input type="text" id="activityName" name="activityName" placeholder="Activity Name" required><br>
   <label for="activityDate">Activity Date & Time</label><br>
   <input type="date" id="activityDate" name="activityDate" required>
-  <label for="activityTIme"></label>
-  <input type="time" id="activityTime" name="activityTime" placeholder="10am" required><br>
+  <label for="activityTime"></label>
+  <input type="time" id="activityTime" name="activityTime" required><br>
   <label for="activityLocation"></label><br>
   <input type="text" id="activityLocation" name="activityLocation" placeholder="Activity Location" required><br><br>
   <label for="myfile">Upload a picture for your activity</label>
   <input type="file" id="myfile" name="myfile"><br><br>
   <label for="activityDetails"></label><br>
-  <textarea cols='50' rows='10' name='activityDetails' placeholder='Add further details of the activity' required></textarea><br><br>
+  <textarea cols='50' rows='10' id="activityDetails" name="details" placeholder='Add further details of the activity' required></textarea><br><br>
   <input class="formSubmit" type="submit" value="Submit">
 </form>
 </div>
 <div class="form">
 		<h2 class="formHeader">RSVP to your next event<br> here <i class="fa-solid fa-arrow-turn-down"></i> </h2>
 	<form class="formContents" action="https://formdump.codeinstitute.net/" target="_blank" method='post'>
-   <label for="name"></label> <br>
-  <input type="text" id="name" name="name" placeholder="First name" required> <input type="text" id="name" name="name" placeholder="Last name" required><br><br>
+   <label for="Firstname"></label> <br>
+  <input type="text" id="Firstname" name="Fname" placeholder="First name" required> <input type="text" id="Lastname" name="Lname" placeholder="Last name" required><br><br>
   <label for="email"></label>
   <input type="email" id="email" name="email" placeholder="Enter your email address" required>
   <h4>Which event are you attending?</h4>
@@ -303,7 +303,7 @@
   <input type="radio" id="no" name="requirements" value="yes" required>
   <label for="no">No</label><br><br>
   <label for="activityDetails"></label>
-  <textarea cols='50' rows='5' name='activityDetails' placeholder="If yes, please provide further details:"></textarea><br><br>
+  <textarea cols='50' rows='5' id="activity-Details" name="details" placeholder="If yes, please provide further details:"></textarea><br><br>
   <input class="formSubmit" type="submit" value="Submit">
 
 </form>
@@ -333,7 +333,6 @@
         <li>
           <a class="socials" href="mailto:adelle.king@outlook.com" target="_blank" rel="noopener" aria-label="Send us an Email, opens in a new tab">
             <i class="fa-regular fa-envelope"></i>
-          </a>
           </a>
         </li>
       </ul>
