--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<!-- Meta tags for search engines -->
-    <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow." />
-    <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities"/>
+    <meta name="description" content="Tribe. A dedicated space for the African and Caribbean community to connect and grow.">
+    <meta name="keywords" content="Tribe, friendships, African and Caribbean, Events, Activities">
 	<!--favicon icon-->
 	<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-	<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io\favicon-32x32.png">
-	<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io\favicon-16x16.png">
+	<link rel="icon" type="image/png" sizes="32x32" href="./favicon_io/avicon-32x32.png">
+	<link rel="icon" type="image/png" sizes="16x16" href="./favicon_io/favicon-16x16.png">
 	<link rel="manifest" href="/site.webmanifest">
 	<!--page title-->
    <title>Tribe</title>
