final adds to the readme file. Final checking of readme file.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
 	</head>
 
 <body>
-	<!-- nav bar-->
+	<!-- nav bar. This should have been able to extend across the page for larger screens but I was unable to acheive this. Upon reflection a hamburger nav optimisation woul dhave been better for  the smaller screen sizes. -->
 	    <header>
+
        <a href="index.html">
-            <h2 id="logo">Tribe</h2>
+       	  <h2 id="logo">Tribe</h2>
         </a>
         <nav>
             <ul id="menu">
@@ -37,21 +38,21 @@
                 
             </ul>
         </nav>
-    </header>
+        </header>
 
-<!-- Hero image text and link-->
+<!-- Hero image - the hero image was created in canva. I did originally have text overlaying the image but found it needed a shadow to show the text better but this shadow was wider than the image itself. And creating the same effect in canva did not yeild the same results so a design choice was made to remove the text from the hero image. -->
 	
 
 	<div class="hero-image"> 
 </div>
 
 
-<!-- introduction text -->
+<!-- introduction text - I wanted this text to be to the point, I did not want lots of text to detract from the images and the colour/design scheme being used. -->
  
 <h1> Find Your People</h1>
  <div class="site-info"> Tribe is your space to connect, build relationships and explore the local area! <br> Find other like minded TRIBEsters, find events to hang out and discover new activities - or submit your own activity for others to join! </div><br>
 
- <!--August Highlights -->
+ <!--August Highlights-  This is the focal point of the website, the african tribal print. This print was pivital to the design to represent the community the site is intended for. I wanted something that offered no second guess as to the community the site is for but something which was not a written word, as this could be mis-interpreted. -->
 
  <div id="pageHeading">
  	<div class="pageHeading">
@@ -59,7 +60,7 @@
  	</div>
  </div>
 
-<!-- featured activities coming up -->
+<!-- featured activities coming up- The events on display are typical of the events held in reality, the site was created to enable the current group of people utilising Tribe to have a space without memebership fees and restriction on functionality which other sites came with. -->
 <div class="featuredContainerOuter">	
   <div  class="featuredContainerLeft">
   	<div class="imageContainer"><img class="imagesIndex" src="assets/images/coffee.webp" alt="man making a coffee"></div>
@@ -72,12 +73,14 @@
   	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
   <div  class="featuredContainerCenter">
-  	<div class="imageContainer"><img class="imagesIndex" src="assets/images/beach.webp" alt="image of a beach"></div>
+  	<div class="imageContainer"><img class="imagesIndex" src="assets/images/beach.webp" alt="picture of a beach"></div>
   	<div class="activity-info"> Beach Meet-up</div>
   	<div class="findOutMore"><a href="event.html">Find out more</a></div>
   </div>
 </div>
 
+
+<!--Footer-  The social media icons will be updated once social media accounts have been activated. It was a design choice to use the email icon as the ability for customers to contact us, rather than having another form on the site.-->
 <footer class="footerContainer">	
   <ul id="social-networks">
         <li>
