added interactive map to about page

--- a/about.html
+++ b/about.html
@@ -39,7 +39,7 @@
         </nav>
     </header>
   </div>
-	 
+	 <!--Initially, this page would have formed the sign-in pages, before leading to member only sections of the website. I was unable to complete this with the limited backend knowledge I have. Something for future developments--> 
 <div class="aboutContainerBox">
   <div class="box1">
     <h1 class="aboutpageH2"> Welcome to Tribe</h1>
@@ -50,8 +50,8 @@
     <img class="img1" src="assets/images/groupphoto.webp" alt="group photo" >
   </div>
 </div>
-<div>
-  <img class="map" src="assets/images/map.webp" alt="map of local area">
+<div> <!--initially, the map was designed with javascript to be interatctive, however, I needed extenstive javascript to enable a search funtionality and a filter functionality, with the use of databases. due to my limitied javascript knowledge currently, I opted for an image of the local area instead. -->
+  <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d34994.62463278603!2d0.5752036362823796!3d51.371489916513646!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2suk!4v1694798717821!5m2!1sen!2suk" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 </div>
 
 <footer class="footerContainer">  
