--- a/index.html
+++ b/index.html
@@ -27,13 +27,13 @@
         <nav>
             <ul id="menu">
                 <li>
-                    <a href="about.html">About</a>
+                    <a class="navBar" href="about.html">About</a>
                 </li>
                 <li>
-                    <a href="event.html">Events</a>
+                    <a class="navBar" href="event.html">Events</a>
                 </li>
                 <li>
-                    <a href="index.html">Home</a>
+                    <a class="navBar" href="index.html">Home</a>
                 </li>
                 
             </ul>
